<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>rm</groupId>
    <artifactId>tabou2</artifactId>
    <version>1.4.0</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.13</version>
        <relativePath/>
    </parent>

    <!-- Propriétés du projet -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <commons.io.version>2.6</commons.io.version>
        <httpclient.version>4.5.2</httpclient.version>
        <json.simple.version>1.1</json.simple.version>
        <commons.lang3.version>3.16.0</commons.lang3.version>
        <javax.validation.version>2.0.1.Final</javax.validation.version>
        <springdoc.version>2.1.0</springdoc.version>
        <google.maps.version>0.2.7</google.maps.version>
        <maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
        <apache.directory.api.version>2.0.0.AM2</apache.directory.api.version>
        <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
        <jasig.cas.client.version>3.6.0</jasig.cas.client.version>
        <mapstruct.version>1.3.1.Final</mapstruct.version>
        <lombok.version>1.18.26</lombok.version>
        <log4j.version>2.17.0</log4j.version>
        <openapi.plugin.version>6.6.0</openapi.plugin.version>
        <swagger.codegen.version>2.4.14</swagger.codegen.version>
        <compiler.plugin.version>3.5.1</compiler.plugin.version>
        <surefire.plugin.version>2.22.2</surefire.plugin.version>
        <commons.collections.version>4.4</commons.collections.version>
        <ocpsoft.rewrite.version>3.5.1.Final</ocpsoft.rewrite.version>
        <openapitools.version>0.2.1</openapitools.version>
		<openapi.version>1.6.15</openapi.version>
		<swagger.version>2.2.8</swagger.version>
		<springfox.version>2.9.2</springfox.version>

		<!-- Configuration SONAR -->
		<sonar.projectKey>${env.SONAR_KEY}${project.artifactId}</sonar.projectKey>
		<sonar.projectName>${project.artifactId}</sonar.projectName>

	</properties>

	<!-- Modules du projet -->
	<modules>
		<module>tabou2-facade</module>
		<module>tabou2-service</module>
		<module>tabou2-storage</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<!-- Modules -->
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-facade</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-front</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-storage</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-jul</artifactId>
				<version>${log4j.version}</version>
			</dependency>


            <!--Commons dependencies -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons.collections.version}</version>
			</dependency>


			<!-- Swagger dependencies -->

			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-models</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${openapi.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-data-rest</artifactId>
				<version>${openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${springfox.version}</version>
			</dependency>

			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${springfox.version}</version>
			</dependency>

			<!-- Google dependencies -->
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>${json.simple.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.maps</groupId>
				<artifactId>google-maps-services</artifactId>
				<version>${google.maps.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.google.code.maven-replacer-plugin/maven-replacer-plugin -->
			<dependency>
				<groupId>com.google.code.maven-replacer-plugin</groupId>
				<artifactId>maven-replacer-plugin</artifactId>
				<version>${maven-replacer-plugin.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.api</groupId>
				<artifactId>api-all</artifactId>
				<version>${apache.directory.api.version}</version>
			</dependency>

			<!-- JWT -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jsonwebtoken.version}</version>
			</dependency>

			<!-- CAS / SSO -->
			<dependency>
				<groupId>org.jasig.cas.client</groupId>
				<artifactId>cas-client-support-springboot</artifactId>
				<version>${jasig.cas.client.version}</version>
			</dependency>

			<!-- Map Struct -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.ocpsoft.rewrite/rewrite-integration-spring -->
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-integration-spring</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.ocpsoft.rewrite/rewrite-impl -->
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-impl</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-servlet</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>${openapitools.version}</version>
			</dependency>

			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.plugin.version}</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>

				<!-- Swagger -->
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<version>${openapi.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>

				<!-- Generate Lombok annotation then Mapstruct classes -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.plugin.version}</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<encoding>${project.build.sourceEncoding}</encoding>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>


			</plugins>
		</pluginManagement>
	</build>
</project>
